--- a/app/src/main/res/drawable/leg_panch.xml
+++ b/app/src/main/res/drawable/leg_panch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/img_3"></item>
 <item android:state_pressed="false" android:drawable="@drawable/batton_not"></item>
     <item android:state_pressed="true" android:drawable="@drawable/batton_yes"></item>
 </selector>
