--- a/app/src/main/res/layout/activity1_main.xml
+++ b/app/src/main/res/layout/activity1_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--ЭТО ФОН-->
+
     <ImageView
         android:id="@+id/star2"
         android:layout_width="wrap_content"
@@ -19,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.644" />
 
+    <!--ЭТО ГЛАВНОЕ ПОЛЕ-->
     <LinearLayout
         android:layout_width="774dp"
         android:layout_height="284dp"
@@ -29,11 +32,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.13999999">
 
+        <!--ЭТО ПОЛЕ ДЛЯ ПЕРВОГО ПЕРСОНАЖА -->
+
+
         <LinearLayout
             android:id="@+id/pers1"
             android:layout_width="190dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <!--ЭТА КНОПКА ВЫБОРА ПЕРСОНАЖА-->
 
             <Button
                 android:id="@+id/button3"
@@ -44,11 +52,15 @@
 
         </LinearLayout>
 
+        <!--ЭТО ВТОРОЕ ПОЛЕ ДЛЯ ВЫБОРА ПЕРСОНАЖА-->
+
         <LinearLayout
             android:id="@+id/pers2"
             android:layout_width="190dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <!--ЭТО КНОПКА ВТОРОГО ПЕРСОНАЖА-->
 
             <Button
                 android:id="@+id/button4"
@@ -60,12 +72,15 @@
         </LinearLayout>
 
 
+        <!--ЭТА ТРЕТЬЕ ПОЛЕ ПЕРСОНАЖА-->
         <LinearLayout
             android:id="@+id/pers3"
             android:layout_width="190dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+
+            <!--ЭТА ЭТО КНОПКА ТРЕТЬЕГО ПЕРСОНАЖА-->
             <Button
                 android:id="@+id/button5"
                 android:layout_width="match_parent"
@@ -77,12 +92,14 @@
         </LinearLayout>
 
 
+        <!--ЭТЩ ЧЕТВЕРТОЕ ПОЛЕ ДЛЯ ПЕРСОНАЖА-->
         <LinearLayout
             android:id="@+id/pers4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <!--ЭТО КНОПКА ЧЕТВЕРТОГО ПЕРСОНАЖА-->
             <Button
                 android:id="@+id/button6"
                 android:layout_width="match_parent"
@@ -92,6 +109,7 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!--ЭТО ПОЛЕ ДЛЯ КНОПКИ START-->
     <LinearLayout
         android:layout_width="205dp"
         android:layout_height="63dp"
@@ -102,20 +120,15 @@
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent">
 
+        <!--ЭТO КНОПКА START-->
         <Button
             android:id="@+id/go"
-            android:layout_width="wrap_content"
-            android:layout_height="75dp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
             android:layout_marginBottom="16dp"
             android:layout_weight="1"
             android:text="Бой"
             app:layout_constraintBottom_toBottomOf="parent" />
-
-        <ImageButton
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/batton_like"></ImageButton>
 
 
     </LinearLayout>
