--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
 
 
+    <!--ЭТО ФОН-->
     <ImageView
         android:id="@+id/star"
         android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.644" />
 
+    <!--ЭТА ПОЛЕ -->
     <LinearLayout
         android:layout_width="172dp"
         android:layout_height="84dp"
@@ -33,6 +35,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498">
 
+        <!--ЭТО КНОПКА START-->
         <Button
             android:id="@+id/start"
             android:layout_width="wrap_content"
