--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,12 @@
 
 
 
-    <!--ЭТО ФОН-->
     <ImageView
         android:id="@+id/star"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/img"
+        android:src="@drawable/abbeyroadprojectedited"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -23,7 +22,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.644" />
 
-    <!--ЭТА ПОЛЕ -->
     <LinearLayout
         android:layout_width="172dp"
         android:layout_height="84dp"
@@ -35,7 +33,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498">
 
-        <!--ЭТО КНОПКА START-->
         <Button
             android:id="@+id/start"
             android:layout_width="wrap_content"
