--- a/app/src/main/res/layout/fight_main.xml
+++ b/app/src/main/res/layout/fight_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/img"
+        android:src="@drawable/abbeyroadprojectedited"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
