--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:id="@+id/AAA"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="onClickMain2"
     tools:context=".MainActivity">
-
 
 
     <ImageView
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickMain2"
             android:text="start"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
