--- a/app/src/main/res/layout/activity1_main.xml
+++ b/app/src/main/res/layout/activity1_main.xml
@@ -127,6 +127,7 @@
             android:layout_height="70dp"
             android:layout_marginBottom="16dp"
             android:layout_weight="1"
+            android:onClick="onClickMain3"
             android:text="Бой"
             app:layout_constraintBottom_toBottomOf="parent" />
 
