--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -2,11 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center">
 
     <!--ЭТО ФОН-->
+
+
+    <!--ЭТО ПОЛЕ ДЛЯ ДЖОСТИКА ПЕРВОГО ИГРОКА-->
+
     <ImageView
         android:id="@+id/star3"
         android:layout_width="wrap_content"
@@ -15,12 +19,11 @@
         android:src="@drawable/abbeyroadprojectedited"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
-    <!--ЭТО ПОЛЕ ДЛЯ ДЖОСТИКА ПЕРВОГО ИГРОКА-->
     <LinearLayout
         android:id="@+id/joystick1"
         android:layout_width="175dp"
@@ -49,17 +52,18 @@
                 android:orientation="vertical">
 
                 <!--ЭТО КНОПКА ЛЕВО-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/left"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/left"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/left"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/left"
                     android:visibility="visible" />
 
             </LinearLayout>
@@ -78,17 +82,18 @@
                 android:orientation="vertical">
 
                 <!--ЭТО КНОПКА УДАРА -->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/punch"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/panch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/punch"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/punch"
                     android:visibility="visible" />
             </LinearLayout>
 
@@ -109,17 +114,18 @@
                 android:orientation="vertical">
 
                 <!--ЭТО  КНОПКА УДАРА НОГОЙ-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/kick"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/leg_panch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/kick"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/kick"
                     android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
@@ -139,19 +145,20 @@
                 android:orientation="vertical">
 
                 <!--ЭТО  КНОПКА ПРАВО -->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/right"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/right"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/right"
                     android:text="Button"
-                    android:visibility="gone" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/right"
                     android:visibility="visible" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -185,17 +192,18 @@
                 android:orientation="vertical">
 
                 <!--ЭТО КНОПКА ЛЕВО 2-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/left"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/left_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/left"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/left"
                     android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
@@ -213,17 +221,18 @@
                 android:orientation="vertical">
 
                 <!--ЭТО  КНОПКА УДАРА РУКОЙ 2-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/punch"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/panch_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/punch"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/punch"
                     android:visibility="visible" />
             </LinearLayout>
 
@@ -243,16 +252,17 @@
                 android:orientation="vertical">
 
                 <!--ЭТО  КНОПКА УДАРА НОГОЙ 2-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/kick"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/leg_panch_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Button"
-                    android:visibility="gone" />
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/kick"
                     android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
@@ -272,18 +282,19 @@
                 android:orientation="vertical">
 
                 <!--ЭТО  КНОПКА ПРАВО 2 -->
-                <Button
-                    android:id="@+id/right_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Button"
-                    android:visibility="gone" />
-
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/right"
                     android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/right_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Button"
+                    android:visibility="visible" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
