--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,82 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@drawable/abbeyroad"
     android:orientation="vertical"
     app:layout_anchorGravity="center">
 
-  <!--ЭТО ФОН-->
-
-  <ImageView
-      android:id="@+id/star2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:scaleType="centerCrop"
-      android:src="@drawable/abbeyroad"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.504"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.644" />
-
-  <!--ЭТО ГЛАВНОЕ ПОЛЕ-->
+    <!--ЭТО ГЛАВНОЕ ПОЛЕ-->
 
     <!--ЭТО ПОЛЕ ДЛЯ КНОПКИ START-->
-  <LinearLayout
-      android:id="@+id/linearLayout"
-      android:layout_width="205dp"
-      android:layout_height="63dp"
-      android:layout_marginBottom="16dp"
-      android:orientation="horizontal"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.481"
-      app:layout_constraintStart_toStartOf="parent">
-
-    <!--ЭТO КНОПКА START-->
-      <Button
-          android:id="@+id/go"
-          android:layout_width="match_parent"
-          android:layout_height="70dp"
-          android:layout_marginBottom="16dp"
-          android:onClick="OnClickListener"
-          android:text="Бой"
-          android:visibility="visible"
-          app:layout_constraintBottom_toBottomOf="parent" />
-
-
-  </LinearLayout>
 
     <LinearLayout
-        android:layout_width="226dp"
-        android:layout_height="89dp"
-        android:layout_marginBottom="80dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/Eror"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:foregroundGravity="center_vertical"
-            android:gravity="center"
-            android:text="Выберите персонажей"
-            android:textColor="#FF0000"
-            android:textColorHighlight="#FFFFFF"
-            android:textColorHint="#FF0000"
-            android:textColorLink="#FF0000"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </LinearLayout>
-
-    <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/aaa"
         android:layout_width="787dp"
 
@@ -90,49 +23,66 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.26">
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/Artur"
-            style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_weight="1"
-            android:contentDescription="@string/app_name"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/content_desc_cartoon_image"
+            android:onClick="onClickMain3"
+            android:padding="15dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/artur_stick" />
+            android:src="@drawable/artur_stick" />
 
         <ImageButton
             android:id="@+id/Rasul"
-            style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_weight="1"
-            android:contentDescription="@string/app_name"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/content_desc_cartoon_image"
+            android:onClick="onClickMain3"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/rasul_stick" />
+            android:src="@drawable/rasul_stick" />
 
         <ImageButton
             android:id="@+id/Nail"
-            style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_weight="1"
-            android:contentDescription="@string/app_name"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/content_desc_cartoon_image"
+            android:onClick="onClickMain3"
+            android:padding="15dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/artur_stick" />
+            android:src="@drawable/artur_stick" />
 
         <ImageButton
             android:id="@+id/Zayn"
-            style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_weight="1"
-            android:contentDescription="@string/app_name"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/content_desc_cartoon_image"
+            android:onClick="onClickMain3"
+            android:padding="15dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/zayn_stick" />
-    </com.google.android.material.button.MaterialButtonToggleGroup>
+            android:src="@drawable/zayn_stick" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="150dp"
+        android:layout_height="55dp"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:text="Игрок 1"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
