--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -32,7 +32,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain3"
+            android:onClick="onClickArtur"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/artur_stick" />
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain3"
+            android:onClick="onClickRasul"
             android:scaleType="fitCenter"
             android:src="@drawable/rasul_stick" />
 
@@ -55,7 +55,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain3"
+            android:onClick="onClickNail"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/artur_stick" />
@@ -67,7 +67,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain3"
+            android:onClick="onClickZayn"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/zayn_stick" />
