--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -33,7 +33,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain4"
+            android:onClick="onClickArtur2"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/artur_stick" />
@@ -45,7 +45,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain4"
+            android:onClick="onClickRasul2"
             android:scaleType="fitCenter"
             android:src="@drawable/rasul_stick" />
 
@@ -56,7 +56,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain4"
+            android:onClick="onClickNail2"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/artur_stick" />
@@ -68,7 +68,7 @@
             android:layout_weight="1"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/content_desc_cartoon_image"
-            android:onClick="onClickMain4"
+            android:onClick="onClickZayn2"
             android:padding="15dp"
             android:scaleType="fitCenter"
             android:src="@drawable/zayn_stick" />
